Fix navbar wrapping

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -32,7 +32,7 @@
       margin-left: 0.25rem;
       vertical-align: middle;
 
-      @include media(new-breakpoint(max-width em(400))) {
+      @include media(new-breakpoint(max-width em(460))) {
         display: none;
       }
     }
